--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
 <body>
     <header>
         <nav class="main-nav">
-            <a href="#home" class="nav-link">HOME</a>
-            <a href="#staff" class="nav-link">STAFF</a>
+            <ul>
+                <li><a href="#home" class="nav-link">HOME</a>
+                </li>
+                <li>
+                    <a href="#staff" class="nav-link">STAFF</a>
+                </li>
+                <li>
+                    <a href="#menu" class="nav-link">OUR MENU</a>
+                </li>
+                <li>
+                    <a href="#contact" class="nav-link">CONTACT</a>
+                </li>
+            </ul>
             <div class="logo-container">
                 <img src="assets/ajikitcho_logo_w.png" alt="Ajikitcho Logo" class="logo-image">
             </div>
-            <a href="#menu" class="nav-link">OUR MENU</a>
-            <a href="#contact" class="nav-link">CONTACT</a>
         </nav>
     </header>
     <main>
@@ -26,18 +35,339 @@
             <video class="hero-video" autoplay muted loop playsinline>
                 <source src="assets/videoRestaurante.mp4" type="video/mp4">
             </video>
-            <div class="hero-overlay"></div>
             <div class="hero-content">
-                <button class="reserve-btn">RESERVE NOW</button>
+                <a class="reserve-btn">RESERVE NOW</a>
             </div>
         </section>
-        <section id="Courses"></section>
-        <section id="Menu"></section>
-        <section id="About"></section>
-        <section></section>
+        <section id="Courses">
+            <div class="parent">
+                <div class="div1"></div>
+                <div class="div2">
+
+                    <h1>
+                        懐石料理
+                        Menu Degustación Primaveral
+                    </h1>
+                    <div>
+                        <h3>
+                            一、先付 - Sakizuke
+                        </h3>
+                        <p>
+                            Tofu sedoso con uni de Hokkaido, brotes de sansai y gelatina de dashi. Acompañado de una
+                            perla
+                            de
+                            wasabi fresco de Shizuoka.
+                        </p>
+                    </div>
+
+                    <div>
+                        <h3>
+                            二、椀物 - Owan
+                        </h3>
+                        <p>
+                            Caldo crystallino de tai con shiitake, brotes de bambú y flor de yuzu. Servido en laca
+                            urushi
+                            con
+                            tapa ceremonial.
+                        </p>
+                    </div>
+
+                    <div>
+                        <h3>
+                            三、向付 - Mukōzuke
+                        </h3>
+                        <p>
+                            Selección de cinco pescados: chutoro, hirame, aji, hotate y botan ebi. Presentados sobre
+                            hielo
+                            tallado con shiso, wasabi y daikon oroshi.
+                        </p>
+                    </div>
+
+                    <div>
+                        <h3>四、焚合 - Takiawase</h3>
+                        <p>
+                            Kabocha, renkon, takenoko y shiitake simmered en dashi dulce. Terminado con kinome fresco y
+                            ralladura de yuzu.
+                        </p>
+                    </div>
+
+                    <div>
+                        <h3>
+                            五、焼物 - Yakimono
+                        </h3>
+                        <p>
+                            Gindara miso-zuke asado sobre carbón binchōtan. Glaseado con miso añejado tres años,
+                            acompañado
+                            de
+                            jengibre encurtido.
+                        </p>
+                    </div>
+
+                    <div>
+                        <h3>
+                            六、強肴 - Shiizakana
+                        </h3>
+                        <p>
+                            Wagyu A5 de Matsusaka en shabu-shabu ligero con verduras de montaña. Servido con ponzu
+                            artesanal
+                            y
+                            gomadare de sésamo tostado.
+                        </p>
+                    </div>
+                </div>
+                <div class="div5"></div>
+                <div class="div6"></div>
+                <div class="div7"></div>
+            </div>
+            <div class="parent2">
+                <div class="div1">
+                    <h1>
+                        懐石料理
+                        Menu Degustación Festival
+                    </h1>
+
+                    <div>
+                        <h3>
+                            一、先付 - Sakizuke
+                        </h3>
+                        <p>
+                            Tofu frío de sésamo con tomate cherry confitado, pepino japonés y una lágrima de yuzu-kosho.
+                            Presentado con brotes frescos de shiso.
+                        </p>
+                    </div>
+
+                    <div>
+                        <h3>
+                            二、椀物 - Owan
+                        </h3>
+                        <p>
+                            Sopa clara de almejas asari con nabo joven, mitsuba y una fina rodaja de yuzu.
+                            Servida en cuenco lacado tradicional.
+                        </p>
+                    </div>
+
+                    <div>
+                        <h3>
+                            三、向付 - Mukōzuke
+                        </h3>
+                        <p>
+                            Sashimi de tai y hamachi acompañado de algas wakame tiernas, wasabi fresco y salsa de soja
+                            artesanal.
+                        </p>
+                    </div>
+
+                    <div>
+                        <h3>
+                            四、焼物 - Yakimono
+                        </h3>
+                        <p>
+                            Trucha japonesa a la parrilla con miso suave y piel crujiente.
+                            Terminada con cebollino y rábano daikon rallado.
+                        </p>
+                    </div>
+                </div>
+                <div class="div2"></div>
+                <div class="div5"></div>
+                <div class="div6"></div>
+            </div>
+        </section>
+        <section id="Menu">
+            <h1>Our Other Menus:</h1>
+            <div class="card-container">
+                <div class="card">
+                    <h1>
+                        甘味懐石
+                        Sweet Menu – Amami Kaiseki
+                    </h1>
+
+                    <div>
+                        <h3>一、先付 - Sakizuke</h3>
+                        <p>Zenzai de matcha con mochi tierno en sopa dulce de anko.</p>
+                    </div>
+
+                    <div>
+                        <h3>二、椀物 - Owan</h3>
+                        <p>Gelatina de sakura servida fría en caldo dulce aromatizado.</p>
+                    </div>
+
+                    <div>
+                        <h3>三、向付 - Mukōzuke</h3>
+                        <p>Warabi mochi con kinako y sirope suave.</p>
+                    </div>
+
+                    <div>
+                        <h3>四、焼物 - Yakimono</h3>
+                        <p>Yuzu cheesecake japonés ligeramente tostado al final.</p>
+                    </div>
+
+                    <div>
+                        <h3>五、煮物 - Nimono</h3>
+                        <p>Kuri kanroni: castañas cocidas en almíbar ligero.</p>
+                    </div>
+
+                    <div>
+                        <h3>六、強肴 - Shiizakana</h3>
+                        <p>Crema de sésamo negro estilo wagashi.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h1>
+                        塩味懐石
+                        Salt Menu – Shiori Kaiseki
+                    </h1>
+
+                    <div>
+                        <h3>一、先付 - Sakizuke</h3>
+                        <p>Sunomono de pepino y wakame con vinagre suave.</p>
+                    </div>
+
+                    <div>
+                        <h3>二、椀物 - Owan</h3>
+                        <p>Sopa miso blanco con tofu sedoso y cebollino.</p>
+                    </div>
+
+                    <div>
+                        <h3>三、向付 - Mukōzuke</h3>
+                        <p>Sashimi de temporada: pescado blanco, atún y marisco.</p>
+                    </div>
+
+                    <div>
+                        <h3>四、焼物 - Yakimono</h3>
+                        <p>Lubina a la parrilla con yuzu-kosho.</p>
+                    </div>
+
+                    <div>
+                        <h3>五、煮物 - Nimono</h3>
+                        <p>Nimono de verduras estacionales en caldo dashi.</p>
+                    </div>
+
+                    <div>
+                        <h3>六、強肴 - Shiizakana</h3>
+                        <p>Chawanmushi tradicional con gamba y shiitake.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h1>
+                        季節懐石
+                        Special Menu – Kisetsu Kaiseki
+                    </h1>
+
+                    <div>
+                        <h3>一、先付 - Sakizuke</h3>
+                        <p>Tartar de hamachi con ikura como aperitivo de bienvenida.</p>
+                    </div>
+
+                    <div>
+                        <h3>二、椀物 - Owan</h3>
+                        <p>Sopa clara de tai con aroma de yuzu.</p>
+                    </div>
+
+                    <div>
+                        <h3>三、向付 - Mukōzuke</h3>
+                        <p>Sashimi premium: toro, calamar y mariscos selectos.</p>
+                    </div>
+
+                    <div>
+                        <h3>四、焼物 - Yakimono</h3>
+                        <p>Wagyu A5 a la robata con sal marina y wasabi fresco.</p>
+                    </div>
+
+                    <div>
+                        <h3>五、煮物 - Nimono</h3>
+                        <p>Salmón en kobujime (curado en kombu) con matices umami.</p>
+                    </div>
+
+                    <div>
+                        <h3>六、強肴 - Shiizakana</h3>
+                        <p>Foie al estilo japonés al vapor con mirin reducido.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="About">
+            <div class="chef">
+                <div class="iz">
+                    <h2>
+                        Chef Masato Kuroda – Master of Kaiseki Art
+                    </h2>
+                    <p>
+                        Chef Masato Kuroda is an experienced professional, committed to preserving the elegance and
+                        philosophy of kaiseki ryokan. His passion for transforming seasonal ingredients into dishes that
+                        convey calmness, precision, and beauty has driven him to refine traditional techniques
+                        throughout his career. For him, cooking kaiseki is a way to honor Japanese culture and offer
+                        each guest an intimate and carefully crafted experience.
+                    </p>
+                </div>
+                <div class="der"></div>
+            </div>
+            <div class="asis">
+                <div class="iz"></div>
+                <div class="der">
+                    <h2>
+                        Hiroshi Tanaka – Assistant Chef
+                    </h2>
+                    <p>
+                        Hiroshi Tanaka brings energy, dedication, and a deep curiosity for traditional Japanese cuisine.
+                        Passionate about attention to detail and the balance of flavors, he has chosen to train in the
+                        art of kaiseki ryokan because he sees it as a way to express respect for ingredients and harmony
+                        with nature. His enthusiasm and discipline make him an essential support within the culinary
+                        team.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="contact">
+            <div class="divider">
+                <div class="form">
+                    <div class="contact-section">
+                        <h1 class="contact-title">Contact Us</h1>
+
+                        <form id="contactForm">
+                            <div class="form-group">
+                                <label for="name">NAME</label>
+                                <input type="text" id="name" name="name" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="email">EMAIL</label>
+                                <input type="email" id="email" name="email" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="country">COUNTRY</label>
+                                <input type="text" id="country" name="country" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="telephone">TELEPHONE</label>
+                                <input type="tel" id="telephone" name="telephone" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="message">MESSAGE</label>
+                                <textarea id="message" name="message" rows="4" required></textarea>
+                            </div>
+
+                            <button type="submit" class="submit-btn">SUBMIT</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="image-contact">
+                    <img src="assets/pexels-cottonbro-3297882.jpg" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="footer-content">
+            <p>&copy; 2025 Ajikitcho. All rights reserved.</p>
+            <div class="social-media">
+                <a href="#" class="social-icon">Facebook</a>
+                <a href="#" class="social-icon">Twitter</a>
+                <a href="#" class="social-icon">Instagram</a>
+                <a href="#" class="social-icon">YouTube</a>
+            </div>
+        </div>
     </footer>
 </body>
 
